fixed horizontal scroll issue on zoom 400%

--- a/less/documentDB.less
+++ b/less/documentDB.less
@@ -2077,7 +2077,7 @@ a:link {
 .resourceTreeAndTabs {
   display: flex;
   flex: 1 1 auto;
-  overflow-x: auto;
+  overflow-x: clip;
   overflow-y: auto;
   height: 100%;
 }
